--- a/app/src/main/res/layout/activity_order.xml
+++ b/app/src/main/res/layout/activity_order.xml
@@ -11,18 +11,30 @@
         android:id="@+id/headingOrder"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-
+        android:hint="Welcome in Shopping App"
         />
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+        <TextView
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:text="Category"
+            android:padding="10dp"/>
+
+        <Spinner
+            android:id="@+id/editCity"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="City"
+            />
+
+    </LinearLayout>
+
     <Button
         android:id="@+id/viewOrder"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="View"/>
-
-    <TextView
-        android:id="@+id/showOrder"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="View Customer Information"
-        />
 </LinearLayout>
