Customer login functionality is modified

--- a/app/src/main/res/layout/activity_admin.xml
+++ b/app/src/main/res/layout/activity_admin.xml
@@ -14,13 +14,13 @@
         android:hint="Heading"
         />
     <TextView
-        android:id="@+id/showOrder"
+        android:id="@+id/showResult"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="View Customer Information"
+
         />
     <Button
-        android:id="@+id/viewOrder"
+        android:id="@+id/btnView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="View"/>
