--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,6 +13,10 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="30dp"
         android:text="Shopping World!" />
+    <TextView
+        android:id="@+id/messageLogin"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
     <LinearLayout
         android:layout_width="334dp"
